# VideoPrinterTurbo

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.toml  config.yaml.sample  docker-compose.yml  i18n.json  main.py  pyproject.toml
app/: __init__.py  asgi.py  router.py
app/config/: __init__.py  config.py
app/controllers/: __init__.py  base.py
app/controllers/manager/: __init__.py  base_manager.py  memory_manager.py  redis_manager.py
app/controllers/v1/: __init__.py  base.py  rewrite.py
app/models/: const.py  exception.py  schema.py
app/plugins/: __init__.py  base.py
app/plugins/downloader/: __init__.py  base.py  yt_dlp_downloader.py
app/plugins/llm/: base.py  gemini_provider.py  openai_provider.py
app/plugins/material/: __init__.py  base.py  pexels_searcher.py  pixabay_searcher.py
app/plugins/publisher/: base.py  upload_post_publisher.py
app/plugins/transcriber/: base.py  subtitle_extractor.py  whisper_transcriber.py
app/services/: state.py  subtitle.py  task.py  video_rewrite.py  voice.py
app/utils/: file_security.py  utils.py
docs/superpowers/plans/: 2026-06-09-test-suite.md
docs/superpowers/specs/: 2026-06-09-test-suite-design.md
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: main.ts
front/src/components/: AppLayout.vue  AppSidebar.vue  AppTopbar.vue  (+1 more)
prototype/LLM配置/: code.html
prototype/添加任务&任务列表/: 技术文档.md
resource/public/: index.html
server/: app.py  config.result  config.yaml  downloader.json
server/config/: config.py
server/middleware/: cors_middleware.py  exception_middleware.py  i18n_middleware.py
server/models/: __init__.py  model.py  pydantic.py  schemas.py
server/pipeline/: __init__.py  pipeline.py
server/routers/: asr_config.py  asr_tts_config.py  index.py  llm_config.py  material_config.py  proxy_config.py  publish_config.py  tasks.py  tts_config.py
server/service/: apscheduler_listener.py  task_const.py  task_manager.py
server/utils/: config.result  const.py  convert_subtitle_ttml_to_srt.py  database.py  exception.py  file_utils.py  gen_config.py  logger.py  result.py  task_utils.py  torch_utils.py  tts_utils.py  tts_voice.py
tests/: conftest.py  test_api.py  test_file_security.py  test_plugin_registry.py  test_schema.py  test_state.py  test_utils.py
webui/: Main.py
webui/i18n/: en.json  zh.json
(+76 files in other folders)
